glwindow: use g_thread_unref() to release navigation thread

use g_thread_unref() to release navigation thread to avoid memory leak

https://bugzilla.gnome.org/show_bug.cgi?id=774462